# secure-vault-usb

./: .gitignore  README.md  build.ps1  check_output.txt  package-lock.json  package.json  postcss.config.js  release.ps1  tailwind.config.js  test.txt  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  build_error.txt  error.txt  libauth.rlib  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: SecureVault_USB_Installer.nsi  hooks.nsi
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  benchmark.rs  crypto.rs  database.rs  files.rs  folders.rs  media.rs  mod.rs  recovery.rs  search.rs  security.rs  upload.rs  vault.rs  viewer.rs
src-tauri/src/models/: auth_simple.rs  compression.rs  encryption.rs  error.rs  file.rs  folder.rs  mod.rs  recovery.rs  test_auth.rs  vault.rs
src-tauri/src/services/: auth.rs  compression.rs  crypto.rs  database.rs  database_batch_temp.rs  file.rs  folder.rs  media.rs  mod.rs  network_guard.rs  recovery.rs  upload_manager.rs  vault.rs  viewer.rs
src-tauri/src/utils/: crypto_utils.rs  file_utils.rs  mod.rs  parallel_benchmark.rs  validation.rs
src/lib/components/auth/: LoginScreen.svelte  SetupWizard.svelte
src/lib/components/common/: Button.svelte  Input.svelte  Modal.svelte  ProgressBar.svelte  TitleBar.svelte  Toast.svelte  ToastContainer.svelte
src/lib/components/file-manager/: AddFileDialog.svelte  AddFolderDialog.svelte  CreateFolderDialog.svelte  DeleteConfirmDialog.svelte  ExportDialog.svelte  FileList.svelte  FileManager.svelte.backup  FolderTree.svelte  NewFileDialog.svelte  RenameDialog.svelte  SimpleCreateFolderDialog.svelte  SimpleFileManager.svelte  SimpleNewFileDialog.svelte  SimpleRenameDialog.svelte  StatusBar.svelte  Toolbar.svelte  UploadProgressDialog.svelte
src/lib/components/settings/: SettingsModal.svelte
src/lib/stores/: auth.ts  file-manager.ts  toast.ts  vault.ts
src/lib/types/: file-manager.ts  index.ts  ui.ts
src/lib/utils/: file-type-detector.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/components-demo/: +page.svelte
src/routes/dashboard/: +page.svelte
(+4 files in other folders)
